try to stop scrolling on mobile

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -30,6 +30,7 @@ body {
 	font-family: 'Ravensara', sans-serif;
 	font-size: 14px;
 	line-height: 1.2;
+	padding: 0;
 }
 
 .admin-page {
